--- a/relay/package.json
+++ b/relay/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "^18.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-relay": "^14.1.0",
     "react-scripts": "5.0.1",
+    "relay-runtime": "^14.1.0",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -20,7 +22,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "relay": "relay-compiler"
+  },
+  "relay": {
+    "src": "./src",
+    "schema": "./data/schema.graphql",
+    "language": "typescript"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +47,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-relay": "^14.1.3",
+    "@types/react-test-renderer": "^18.0.0",
+    "@types/relay-runtime": "^14.1.6",
+    "@types/relay-test-utils": "^14.1.0",
+    "babel-plugin-relay": "^14.1.0",
+    "react-test-renderer": "^18.2.0",
+    "relay-compiler": "^14.1.0",
+    "relay-test-utils": "^14.1.0"
   }
 }
